dm_control basic study

--- a/study/dm_control.ipynb
+++ b/study/dm_control.ipynb
@@ -5184,7 +5184,7 @@
       "source": [
         "# @title Measuring values {vertical-output: true}\n",
         "\n",
-        "timevals = []\n",
+        "time_vals = []\n",
         "angular_velocity = []\n",
         "stem_height = []\n",
         "\n",
@@ -5192,7 +5192,7 @@
         "physics.reset(0)\n",
         "while physics.data.time < duration:\n",
         "    physics.step()\n",
-        "    timevals.append(physics.data.time)\n",
+        "    time_vals.append(physics.data.time)\n",
         "    angular_velocity.append(physics.data.qvel[3:6].copy())\n",
         "    stem_height.append(physics.named.data.geom_xpos[\"stem\", \"z\"])\n",
         "\n",
@@ -5202,11 +5202,11 @@
         "figsize = (width / dpi, height / dpi)\n",
         "_, ax = plt.subplots(2, 1, figsize=figsize, dpi=dpi, sharex=True)\n",
         "\n",
-        "ax[0].plot(timevals, angular_velocity)\n",
+        "ax[0].plot(time_vals, angular_velocity)\n",
         "ax[0].set_title(\"angular velocity\")\n",
         "ax[0].set_ylabel(\"radians / second\")\n",
         "\n",
-        "ax[1].plot(timevals, stem_height)\n",
+        "ax[1].plot(time_vals, stem_height)\n",
         "ax[1].set_xlabel(\"time (seconds)\")\n",
         "ax[1].set_ylabel(\"meters\")\n",
         "_ = ax[1].set_title(\"stem height\")"
